--- a/package.json
+++ b/package.json
@@ -8,20 +8,26 @@
     "tsc:w": "tsc -w"
   },
   "dependencies": {
-    "@angular/common": "2.4.0",
-    "@angular/compiler": "2.4.0",
-    "@angular/core": "2.4.0",
-    "@angular/forms": "2.4.0",
-    "@angular/http": "2.4.0",
-    "@angular/platform-browser": "2.4.0",
-    "@angular/platform-browser-dynamic": "2.4.0",
-    "@angular/router": "3.4.0",
+    "@angular/animations": "^4.2.2",
+    "@angular/common": "^4.2.2",
+    "@angular/compiler": "^4.2.2",
+    "@angular/compiler-cli": "^4.2.2",
+    "@angular/core": "^4.2.2",
+    "@angular/forms": "^4.2.2",
+    "@angular/http": "^4.2.2",
+    "@angular/platform-browser": "^4.2.2",
+    "@angular/platform-browser-dynamic": "^4.2.2",
+    "@angular/platform-server": "^4.2.2",
+    "@angular/router": "^4.2.2",
+    "angular-in-memory-web-api": "^0.3.2",
     "core-js": "2.4.1",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
+    "typescript": "^2.3.4",
     "zone.js": "0.7.4"
   },
   "devDependencies": {
+    "@angular/cli": "^1.1.1",
     "@types/node": "^6.0.46",
     "concurrently": "3.1.0",
     "gulp": "^3.9.1",
